<resources>
    <string name="app_name">Games Finder</string>
    <string name="logo_todolist" translatable="false">Logo TodoList</string>
    <string name="game_finder">Game Finder</string>
    <string name="game_s_image">Game\'s Image</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="game_title">Game Title</string>
    <string name="game_release_date">Game Release Date</string>
    <string name="game_details">Game Details</string>
    <string name="game_details_info_overview">Game Details Info Overview</string>
    <string name="searchGameshint">search games</string>
    <string name="search_games">Search Games</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="logo_login">Logo Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="finish">Finish</string>
    <string name="user">User</string>
    <string name="logged_user">Logged User:</string>
    <string name="error_on_show">Error on show the username.</string>
    <string name="welcome_user">Welcome</string>
</resources>